syntax = "proto3";

package proto;
option go_package = "github.com/derpartizanen/gophkeeper/proto";

message RegisterUserRequest {
  string username = 1; // Name of a user.
  string security_key = 2; // Hashed encryption key generated by client.
}

message RegisterUserResponse {
  string access_token = 1; // JWT access token.
}

service Users {
  // Register new user.
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse);
}
